--- a/package.json
+++ b/package.json
@@ -165,7 +165,7 @@
   "license": "MIT",
   "homepage": "https://github.com/gkushang/cucumber-html-reporter#readme",
   "dependencies": {
-    "chalk": "^5.2.0",
+    "chalk": "v2.4.2",
     "find": "^0.3.0",
     "fs-extra": "^11.1.0",
     "js-base64": "^3.7.3",
