--- a/package.json
+++ b/package.json
@@ -142,11 +142,6 @@
       "url": "https://github.com/Fabienmrqs"
     }
   ],
-  "scripts": {
-    "pretest": "node --trace-deprecation node_modules/cucumber/bin/cucumber-js test/features/ -r test/features/step_definitions -f json:test/report/cucumber_report.json --no-strict || true",
-    "clean": "rm -rf screenshots",
-    "test": "node --trace-deprecation test/createHtmlReports.js"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gkushang/cucumber-html-reporter.git"
@@ -162,6 +157,12 @@
     "html report",
     "json to html"
   ],
+  "scripts": {
+    "pretest": "node --trace-deprecation node_modules/cucumber/bin/cucumber-js test/features/ -r test/features/step_definitions -f json:test/report/cucumber_report.json --no-strict || true",
+    "clean": "rm -rf screenshots",
+    "test": "node --trace-deprecation test/createHtmlReports.js",
+    "dev": "./node_modules/bin/cucumber-js"
+  },
   "license": "MIT",
   "homepage": "https://github.com/gkushang/cucumber-html-reporter#readme",
   "dependencies": {
