--- a/package.json
+++ b/package.json
@@ -158,10 +158,9 @@
     "json to html"
   ],
   "scripts": {
-    "pretest": "node --trace-deprecation node_modules/cucumber/bin/cucumber-js test/features/ -r test/features/step_definitions -f json:test/report/cucumber_report.json --no-strict || true",
+    "pretest": "node --trace-deprecation node_modules/@cucumber/cucumber/bin/cucumber-js test/features/ -r test/features/step_definitions -f json:test/report/cucumber_report.json --no-strict || true",
     "clean": "rm -rf screenshots",
-    "test": "node --trace-deprecation test/createHtmlReports.js",
-    "dev": "./node_modules/bin/cucumber-js"
+    "test": "node --trace-deprecation test/createHtmlReports.js"
   },
   "license": "MIT",
   "homepage": "https://github.com/gkushang/cucumber-html-reporter#readme",
@@ -176,7 +175,7 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "cucumber": "6.0.7"
+    "@cucumber/cucumber": "^8.9.1",
+    "chai": "^4.2.0"
   }
 }
