--- a/package.json
+++ b/package.json
@@ -172,6 +172,7 @@
     "jsonfile": "^6.1.0",
     "lodash": "^4.17.11",
     "node-emoji": "^1.10.0",
+    "open": "^8.4.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
