updating and fixiing files

--- a/coding-Standards/eslint/.eslintrc.json
+++ b/coding-Standards/eslint/.eslintrc.json
@@ -40,56 +40,11 @@
         "quotes":["error", "single"]
     },
     "globals": {
-        "When": "readonly",
-        "Then": "readonly",
-        "Before": "readonly",
-        "BeforeAll": "readonly",
-        "BeforeStep": "readonly",
-        "After": "readonly",
-        "AfterAll": "readonly",
-        "AfterStep": "readonly",
-        "And": "readonly",
-        "But": "readonly",
-        "helpers":"readonly",
-        "browser": "readonly",
-        "log": "readonly",
-        "env": "readonly",
-        "date": "readonly",
-        "dateTime": "readonly",
-        "startDateTime": "readonly",
-        "endDateTime": "readonly",
-        "browserName": false,
-        "BROWSER_NAME": false,
-        "reportName": "readonly",
-        "projectName": "readonly",
-        "settings": false,
-        "envConfig": "readonly",
-        "request": "readonly",
-        "assert": "readonly",
-        "expect": "readonly",
-        "shared": "readonly",
-        "DELAY_100ms": "readonly",
-        "DELAY_200ms": "readonly",
-        "DELAY_300ms": "readonly",
-        "DELAY_500ms": "readonly",
-        "DELAY_1s": "readonly",
-        "DELAY_2s": "readonly",
-        "DELAY_3s": "readonly",
-        "DELAY_5s": "readonly",
-        "DELAY_10s": "readonly",
-        "DELAY_15s": "readonly",
-        "DELAY_20s": "readonly",
-        "DELAY_30s": "readonly",
         "noImplicitAny": "readonly",
         "noImplicitThis": "readonly",
         "strictNullChecks": "readonly",
         "strictFunctionTypes": "readonly",
         "noEmit": "readonly",
-        "forceConsistentCasingInFileNames": "readonly",
-        "confSettings": "readonly",
-        "sharedObjects": "readonly",
-        "pageObjects": "writable",
-        "utam": "readonly",
-        "s3Data": "readonly"
+        "forceConsistentCasingInFileNames": "readonly"
     }
 }
